[project]
name = "comfyui-ycanvas"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "torchvision", "transformers", "aiohttp", "numpy", "tqdm", "Pillow"]

[project.urls]
Repository = "https://github.com/yichengup/Comfyui-Ycanvas"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui-Ycanvas"
Icon = ""
